corregido inicio e index

--- a/screens/buscarProductos.html
+++ b/screens/buscarProductos.html
@@ -19,7 +19,7 @@
             <img class="encabezado__logo" src="../assets/imagenes/logo.png" alt="">
             <input type="text" class="encabezado__busqueda" placeholder="¿Qué deseas buscar?">
             <a href="#" data-search><img class="encabezado__lupa" src="../assets/iconos/lupa.png" alt="lupa"></a>
-            <a href="./index.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
         </div>
         <button class="encabezado__login"><a href="./login.html">Login</a></button>
     </header>
