--- a/screens/productos.html
+++ b/screens/productos.html
@@ -17,7 +17,7 @@
     <header class="encabezado__container">
         <div class="encabezado__controles">
             <img class="encabezado__logo" src="../assets/imagenes/logo.png" alt="">
-            <a href="./index.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <button type="text" class="encabezado__busqueda" placeholder="¿Qué deseas buscar?"> <a href="./buscarProductos.html">Buscar</a></button>
         </div>
         
