--- a/screens/agregar-productos.html
+++ b/screens/agregar-productos.html
@@ -16,7 +16,7 @@
     <header class="encabezado__container">
         <div class="encabezado__controles">
             <img class="encabezado__logo" src="../assets/imagenes/logo.png" alt="">
-            <a href="./index.html">Inicio</a>            
+            <a href="../index.html">Inicio</a>            
             <button type="text" class="encabezado__busqueda" placeholder="¿Qué deseas buscar?"> <a href="./buscarProductos.html">Buscar</a></button>
         </div>
         <button class="encabezado__login"><a href="./editar-producto.html">Editar Productos</a></button>
