--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Geek</title>
-    <link rel="stylesheet" href="../css/secciones/reset.css">
-    <link rel="stylesheet" href="../css/secciones/encabezado.css">
-    <link rel="stylesheet" href="../css/secciones/hero.css">
-    <link rel="stylesheet" href="../css/secciones/principal.css">
-    <link rel="stylesheet" href="../css/secciones/contacto.css">
-    <link rel="stylesheet" href="../css/secciones/footer.css">
+    <link rel="stylesheet" href="./css/secciones/reset.css">
+    <link rel="stylesheet" href="./css/secciones/encabezado.css">
+    <link rel="stylesheet" href="./css/secciones/hero.css">
+    <link rel="stylesheet" href="./css/secciones/principal.css">
+    <link rel="stylesheet" href="./css/secciones/contacto.css">
+    <link rel="stylesheet" href="./css/secciones/footer.css">
 
 </head>
 <body>
