--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="./screens/login.html"><button class="encabezado__login">Login</button></a>
     </header>
     <section class="hero__container">
-        <div class="hero__background" src="#" alt="hero__background"></div>
+        <img class="hero__background" src="./assets/imagenes/hero.png" alt="hero__background">
         <div class="hero__elements">
             
             <h2 class="hero__titulo">Febrero Promocional</h2>
