--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="./screens/login.html"><button class="encabezado__login">Login</button></a>
     </header>
     <section class="hero__container">
-        <img class="hero__background" src="./assets/imagenes/hero.png" alt="hero__background">
+        <div class="hero__background" alt="hero__background"></div>
         <div class="hero__elements">
             
             <h2 class="hero__titulo">Febrero Promocional</h2>
@@ -190,5 +190,4 @@
         <p class="footer-fecha">2023</p>
     </footer>
 </body>
-<script src="./js/obtenerProductos.js"></script>
 </html>
