--- a/screens/agregar-productos.html
+++ b/screens/agregar-productos.html
@@ -30,7 +30,7 @@
             </div>
             <input placeholder="Categoria" name="categoria" class="agregar categoria" type="text" required>
             <input placeholder="Nombre del producto" name="nombre" class="agregar nombre" type="text"maxlength="20" required>
-            <input placeholder="Precio del producto" name="precio" class="agregar precio" type="number" required pattern="[0-9]">
+            <input placeholder="Precio del producto" name="precio" class="agregar precio" type="number" required>
             <input placeholder="Descripción del producto" name="descripcion" class="agregar descripcion" type="text" maxlength="150" required>
             <button class="agregar-boton">Agregar producto</button>
 
