--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="encabezado__container">
         <div class="encabezado__controles">
-            <img class="encabezado__logo" src="./assets/imagenes/logo.png" alt="">
+            <div class="encabezado__logo" src="#" alt=""></div>
             <button type="text" class="encabezado__busqueda" placeholder="¿Qué deseas buscar?"> <a href="./screens/buscarProductos.html">Buscar</a></button>
             
         </div>
@@ -40,7 +40,7 @@
             </div>
             <ul class="catalogo__productos">
                 <li class="catalogo__item">
-                    <img src="./assets/imagenes/Galeria-starwars/1.png" alt="item-imagen" class="item-imagen">
+                    <img src="./assets/imagenes/Galeria-starwars/1. " alt="item-imagen" class="item-imagen">
                     <h3 class="item-titulo">Producto XYZ</h3>
                     <h2 class="item-precio">$ 60,00</h2>
                     <a href="./screens/verProducto.html"class="item-producto">Ver producto</a>
